# FastAPI-basic

./: alembic.ini  main.py  pyproject.toml
Api/: users.py
DB/: SqlSetup.py
alembic/: env.py
alembic/versions/: 95964e95ca6a_change_role_enum_to_string_based.py  a2e653ea6c47_moving_is_active_to_profiles.py  bd9e3fe7a1e1_.py  c901404f8bbd_initial_migration.py
